--- a/Description
+++ b/Description
@@ -1,4 +1,4 @@
-# Общее описание с википедии
+#Общее описание с википедии
     управление данными во внешней памяти (на дисках);
     управление данными в оперативной памяти с использованием дискового кэша;
     журнализация изменений, резервное копирование и восстановление базы данных после сбоев;
@@ -12,17 +12,18 @@
 СУБД — комплекс программ, позволяющих создать базу данных (БД) и манипулировать данными (вставлять, обновлять, удалять и выбирать). Система обеспечивает безопасность, 
 надёжность хранения и целостность данных, а также предоставляет средства для администрирования БД.
 ТИП: Объектно-реляционная локальная Клиент-серверная с непосредственной записью.
-# Хранение информации
+#Хранение информации
   В сжатом виде один общий файл, при обратоке распаковывается.
   Каждая таблица в отдельный файл. Содержит перечень значений ключевых полей (со ссылкой на место записи) в начале.
   данные хранятся по строкам, используя объекты. в итоге каждый файле, будет следующий порядок: ключ записи:значение, тип объекта:значение {поле:значение}.
   Классы объектов в специальной части файла.
   Метод сжатия: ХЗ, можно использовать стандартную архивацию(замена единиц на их количество)
-# Журнализация
+  Связи отдельно в виде: тип:изменения, таблица1:поле, таблица2:поле.
+#Журнализация
   отдельный подфайл: время, таблица, ключ, изменения. Хранить 10 действий после сохранения, и сколько-то в режиме редактирования.
-# Язык запросов
+#Язык запросов
   Тут прост ХЗ пока
-# встроенный функционал
+#Встроенный функционал
   Добавление записи исходя из класса
   Удаление записи
   Поиск нужного объекта по ключу
