--- a/Description
+++ b/Description
@@ -19,12 +19,24 @@
   Классы объектов в специальной части файла.
   Метод сжатия: ХЗ, можно использовать стандартную архивацию(замена единиц на их количество)
   Связи отдельно в виде: тип:изменения, таблица1:поле, таблица2:поле.
+  Хранится информация о клиенте, который спроектировал БД (anti-copyright)
+  Данные зашифрованы с помощью специальной хеш-функции.
 #Журнализация
   отдельный подфайл: время, таблица, ключ, изменения. Хранить 10 действий после сохранения, и сколько-то в режиме редактирования.
 #Язык запросов
   Тут прост ХЗ пока
+  SQL-запросы (ru ; en)
 #Встроенный функционал
   Добавление записи исходя из класса
   Удаление записи
   Поиск нужного объекта по ключу
   Поиск вхождений данных
+  Сортировка данных
+  Стандартные математические функции с данными
+  Выбор использовать ли коскадное обновление/удаление данных
+#Архитектура
+  Клиент(интерфейс) - API(функциональность)
+#Интерфейс
+  Поддержка дневного/ночного режима
+  "Масштабируемость" (т.е. кнопки не уходят за край экрана, а стягиваются/растягиваются)
+  
