--- a/Description
+++ b/Description
@@ -13,7 +13,7 @@
 надёжность хранения и целостность данных, а также предоставляет средства для администрирования БД.
 ТИП: Объектно-реляционная локальная Клиент-серверная с непосредственной записью.
 #Хранение информации
-  В сжатом виде один общий файл, при обратоке распаковывается.
+  В сжатом виде один общий файл, при обработке распаковывается.
   Каждая таблица в отдельный файл. Содержит перечень значений ключевых полей (со ссылкой на место записи) в начале.
   данные хранятся по строкам, используя объекты. в итоге каждый файле, будет следующий порядок: ключ записи:значение, тип объекта:значение {поле:значение}.
   Классы объектов в специальной части файла.
