--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /BDB/BDB/bin/Debug
+/BDB/BDB/obj/Debug
+/BDB/BDB/obj/Release
+/.vs/
