--- a/Description
+++ b/Description
@@ -13,11 +13,11 @@
 надёжность хранения и целостность данных, а также предоставляет средства для администрирования БД.
 ТИП: Объектно-реляционная локальная Клиент-серверная с непосредственной записью.
 #Хранение информации
-  В сжатом виде один общий файл, при обработке распаковывается.
-  Каждая таблица в отдельный файл. Содержит перечень значений ключевых полей (со ссылкой на место записи) в начале.
-  данные хранятся по строкам, используя объекты. в итоге каждый файле, будет следующий порядок: ключ записи:значение, тип объекта:значение {поле:значение}.
-  Классы объектов в специальной части файла.
-  Метод сжатия: ХЗ, можно использовать стандартную архивацию(замена единиц на их количество)
+  В сжатом виде один общий файл, при обработке распаковывается. //есть
+  Каждая таблица в отдельный файл. Содержит перечень значений ключевых полей (со ссылкой на место записи) в начале. //есть изменено
+  данные хранятся по строкам, используя объекты. в итоге каждый файле, будет следующий порядок: ключ записи:значение, тип объекта:значение {поле:значение}. //есть изменено
+  Классы объектов в специальной части файла. //выпилить
+  Метод сжатия: ХЗ, можно использовать стандартную архивацию(замена единиц на их количество) //есть LZW
   Связи отдельно в виде: тип:изменения, таблица1:поле, таблица2:поле.
   Хранится информация о клиенте, который спроектировал БД (anti-copyright)
   Данные зашифрованы с помощью специальной хеш-функции.
