--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 ﻿################################################################################
 # Данный GITIGNORE-файл был автоматически создан Microsoft(R) Visual Studio.
 ################################################################################
-
-/BDB/BDB/bin/Debug
-/BDB/BDB/obj/Debug
-/BDB/BDB/obj/Release
-/.vs/
-*.cache
+/.vs/*
+/BDB/BDB/bin
+/BDB/BDB/obj
+/BDB/packages
+/BDB/BDBTest/bin/Release
+/BDB/BDBTest/obj
+/BDB/.vs/*
