--- a/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/BDBSM_WindowsApp.csproj
+++ b/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/BDBSM_WindowsApp.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon %284%29.ico</ApplicationIcon>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BDB, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -82,11 +82,15 @@
     <Compile Include="Infrastructure\Commands\Base\Command.cs" />
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\CreateFileDialogViewModel.cs" />
+    <Compile Include="ViewModels\CreateRelationViewModel.cs" />
     <Compile Include="ViewModels\InfoDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\StartWindowViewModel.cs" />
     <Compile Include="Views\CreateFileDialog.xaml.cs">
       <DependentUpon>CreateFileDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreateRelation.xaml.cs">
+      <DependentUpon>CreateRelation.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\InfoDialog.xaml.cs">
       <DependentUpon>InfoDialog.xaml</DependentUpon>
@@ -107,6 +111,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Light\WindowControlButtonTheme.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CreateRelation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -195,16 +203,7 @@
     <Resource Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icon %281%29.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icon %282%29.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icon %283%29.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icon %284%29.ico" />
+    <Resource Include="Images\Icons\MakeRelation.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.1.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.1.0\build\MaterialDesignThemes.targets')" />
