--- a/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/packages.config
+++ b/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/packages.config
@@ -4,4 +4,7 @@
   <package id="MaterialDesignThemes" version="4.1.0" targetFramework="net472" />
   <package id="System.Management" version="5.0.0" targetFramework="net472" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
+  <package id="Xceed.Products.Wpf.DataGrid.Base" version="7.0.21122.9580" targetFramework="net472" />
+  <package id="Xceed.Wpf.Controls" version="7.0.21122.9580" targetFramework="net472" />
+  <package id="Xceed.Wpf.DataGrid" version="7.0.21122.9580" targetFramework="net472" />
 </packages>
